--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -7,14 +7,13 @@
 		"--security-opt",
 		"seccomp=unconfined"
 	],
-	"onCreateCommand": "apt-get update -y && apt-get install -y --install-recommends apt-utils openssh-client gnupg2 dirmngr iproute2 procps lsof htop net-tools psmisc curl tree wget rsync ca-certificates unzip bzip2 zip nano vim-tiny less jq lsb-release apt-transport-https dialog libc6 libgcc1 libkrb5-3 libgssapi-krb5-2 libicu[0-9][0-9] liblttng-ust[0-9] libstdc++6 zlib1g locales sudo ncdu man-db strace manpages manpages-dev init-system-helpers software-properties-common python3.11 python3.11-distutils python3.11-dev python3-pip && python3.11 -m pip install --user pipenv && sudo apt-get full-upgrade -y && lsb_release -a",
+	"onCreateCommand": "apt-get update -y && apt-get install -y --install-recommends apt-utils openssh-client gnupg2 dirmngr iproute2 procps lsof htop net-tools psmisc curl tree wget rsync ca-certificates unzip bzip2 zip nano vim-tiny less jq lsb-release apt-transport-https dialog libc6 libgcc1 libkrb5-3 libgssapi-krb5-2 libicu[0-9][0-9] liblttng-ust[0-9] libstdc++6 zlib1g locales sudo ncdu man-db strace manpages manpages-dev init-system-helpers software-properties-common && sudo apt-get full-upgrade -y && wget https://packages.microsoft.com/config/ubuntu/22.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb && sudo dpkg -i packages-microsoft-prod.deb && sudo apt-get update -y && sudo apt-get install -y powershell --install-recommends && sudo rm packages-microsoft-prod.deb && lsb_release -a",
+	"shutdownAction": "stopContainer",
 	"features": {
 		"ghcr.io/devcontainers/features/git:1": {},
 		"ghcr.io/devcontainers/features/git-lfs:1": {},
 		"ghcr.io/devcontainers/features/github-cli:1": {}
 	},
-	// THIS IMAGE ALSO INCLUDES A NON-ROOT USER WITH SUDO ACCESS: 'DEFAULT'. COMMENT OUT 'REMOTEUSER' PROPERTY BELOW IF YOU WANT TO RUN AS ROOT.
-	// "remoteUser": "default",
 	"customizations": {
 		"vscode": {
 			"settings": {
@@ -504,6 +503,7 @@
 				"outline.showStructs": true,
 				"outline.showTypeParameters": true,
 				"outline.showVariables": true,
+				"terminal.integrated.defaultProfile.linux": "pwsh",
 				"git.allowForcePush": true,
 				"git.allowNoVerifyCommit": false,
 				"git.alwaysShowStagedChangesResourceGroup": false,
@@ -592,7 +592,9 @@
 				"git.verboseCommit": true
 			},
 			"extensions": [
-				"GitHub.copilot-nightly"
+				"GitHub.copilot-nightly",
+				"ms-vscode.PowerShell-Preview",
+				"ms-python.python"
 			]
 		}
 	}
